generated/nixidy/prod/sonarr/Deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: dotfiles
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: sonarr
      app.kubernetes.io/instance: sonarr
      app.kubernetes.io/name: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 34843760a33900f75dc6aa9d330e441ddf1a1f8d9dbf8fdb9b9e4409ccb20547
      labels:
        app.kubernetes.io/controller: sonarr
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/name: sonarr
    spec:
      automountServiceAccountToken: true
      containers:
        - envFrom:
            - secretRef:
                name: sonarr
            - configMapRef:
                name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.15.2940
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: sonarr
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /tmp
              name: tmpfs
              subPath: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr
        - emptyDir: {}
          name: tmpfs
