generated/nixidy/prod/sonarr/Service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/service: sonarr
  name: sonarr
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/controller: sonarr
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
  type: ClusterIP
