generated/nixidy/prod/sonarr/HTTPRoute-sonarr.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: dotfiles
spec:
  hostnames:
    - sonarr.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          namespace: dotfiles
          port: 80
          weight: 1
